kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-server
        image: manju369/flask-server:2
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - name: main
          containerPort: 5000
