kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  labels:
    app: flask-app
spec:
  selector:
    app: flask-app
  ports:
  - name: main
    port: 5000
    targetPort: 5000
  type: ClusterIP
