kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-server-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
    - secretName: 35.244.49.131.nip.io-tls
      hosts:
      - 35.244.49.131.nip.io

  rules:
  - host: "35.244.49.131.nip.io"
    http:
      paths:
      - path: /codes
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-app-service 
            port:
              number: 5000
